[package]
name = "perpendicular"
version = "0.1.2"
edition = "2018"
license = "Apache-2.0"
description = "Perpendicular is a simple general purpose n-dimensional vector library."
keywords = ["vector", "physics", ""]
categories = ["Data Structures", "No standard library", "Rendering", "Game development", "Simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
serialize = ["serde"]
alloc = []

[dependencies]
num = "0.4.0"
serde = {version="1.0.126", features=["derive"], optional=true}
array-init = "2.0.0"
concat-idents = "1.1.2"
