[package]
name = "perpendicular"
version = "0.1.6"
edition = "2018"
license = "Apache-2.0"
description = "Perpendicular is a simple general purpose n-dimensional vector library."
keywords = ["vector", "physics", "simulation"]
categories = ["data-structures", "no-std", "rendering", "game-development", "simulation"]
documentation = "https://docs.rs/perpendicular"
homepage = "https://github.com/jonay2000/perpendicular"
repository = "https://github.com/jonay2000/perpendicular"
authors = ["jonay2000 <jonabent@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
serialize = ["serde"]
alloc = []

[dependencies]
num = "0.4.0"
serde = {version="1.0.126", features=["derive"], optional=true}
array-init = "2.0.0"
concat-idents = "1.1.2"
